--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
 	  
 	</head>
 	<body>
-	  	<div id="app"></div>
-		<script src='./static/timbre_bg.js'></script>
-	  
+	  	<!-- <div id="app"></div>
+		<script src='./static/timbre_bg.js'></script> -->
+	  	<div id='app'></div>
 	</body>
 </html>
